feat: support basic rag api by go server
